--- a/Site/index.html
+++ b/Site/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title >Show Cakes </title>
     <link rel="stylesheet" href="Estilo.css">
-</head>
+ </head>
 
-<body>
-  <header id="header">  
-   <div class="container">
+    <body>
 
-    <div class="flex">
+        <header id="header"> 
 
-        <a href="a"><i class="bi bi-cup-hot"></i></a>
+           <div class="container">
 
-        <nav>
-            <ul>
-                <li><a href="a">HOME</a></li>
-                <li><a href="a">BOLOS</a></li>
-                <li><a href="a">QUEM SOMOS</a></li>
-            </ul>
-        </nav>
+               <div class="flex">
 
-        <div class="btn-contato">
-        <a href="bit.ly/ContatoShowCakes"><button>CONTATO</button></a>
+                    <img  src="logotipo.png" alt="">
 
-        </div>
+                       <nav>
+                           <ul>
+                               <li><a href="a">HOME</a></li>
+                               <li><a href="a">BOLOS</a></li>
+                               <li><a href="a">QUEM SOMOS</a></li>
+                           </ul>
+                       </nav>
 
-         </div> <!--flex-->
+                           <div class="btn-contato">
 
-   </div> <!--container-->
-</header>
+                        <a href="https://bit.ly/ContatoShowCakes"><button>CONTATO</button></a>
 
-  <section class="banner">
-  <h1>DESCUBRA UM <span>NOVO GOSTO</span></h1>
-  </section>
+                    </div>
+         
+                </div> <!--flex-->
 
-   <script src="menu.js"></script>
-</body>
+            </div> <!--container-->
+
+        </header>
+
+            <section class="banner">
+
+             <h1>DESCUBRA UM <span>NOVO GOSTO</span></h1>
+
+            </section>
+
+        <script src="menu.js"></script>
+
+    </body>
 
 </html>
