--- a/Site/index.html
+++ b/Site/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title >Show Cakes </title>
-    <link rel="stylesheet" href="Estilo.css">
+    <link rel="stylesheet" href="style.css">
+    <title >Show Cakes</title>
  </head>
 
     <body>
@@ -15,9 +15,9 @@
            <div class="container">
 
                <div class="flex">
-
-                    <img  src="logotipo.png" alt="">
-
+                <a href ="a">
+                    <img  src="cake.svg" alt="">
+                  </a>
                        <nav>
                            <ul>
                                <li><a href="a">HOME</a></li>
@@ -28,7 +28,7 @@
 
                            <div class="btn-contato">
 
-                        <a href="https://bit.ly/ContatoShowCakes"><button>CONTATO</button></a>
+                        <a href="https://bit.ly/ContatoShowCakes" class="button"><button>CONTATO</button></a>
 
                     </div>
          
